Fixed a bunch of stuff. May need to fix the projects layout later

--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,12 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Your Name
+title                    : Jamie Dalvito
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : Your Name
-description              : Your Name - Projects and CV 
+name                     : Jamie Dalvito
+description              : Jamie Dalvito - Projects and CV 
+url: "https://cornell-mae-ug.github.io"
 baseurl: "/fa25-portfolio-gjd55" 
 
 # Theme and Style
